--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,3 +34,7 @@ layout: default
 
   <a href="#" class="top">Top</a>
 </div>
+
+{% if site.disqus_shortname %}
+  {% include disqus_comments.html %}
+{% endif %}
